Closed Bug 1058331 Opened 11 years ago Closed 11 years ago

Plug leak in TransportLayerDtls::Setup

Categories

(Core :: WebRTC: Networking, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: bwc, Assigned: bwc)

References

Details

(Whiteboard: [MemShrink:P3])

Attachments

(1 file, 1 obsolete file)

No description provided.
Whiteboard: [MemShrink]
Attachment #8478719 - Flags: review?(martin.thomson)
Attachment #8478719 - Flags: review?(martin.thomson) → review+
Attachment #8478719 - Attachment is obsolete: true
Comment on attachment 8481551 [details] [diff] [review] Plug a leak in TransportLayerDtls::Setup, and remove a suppression. Review of attachment 8481551 [details] [diff] [review]: ----------------------------------------------------------------- Carry forward r=mt, and push to try: https://tbpl.mozilla.org/?tree=Try&rev=00ea2c11ef49
Attachment #8481551 - Flags: review+
Whiteboard: [MemShrink] → [MemShrink:P3]
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: