Bug 1058331: Plug a leak in TransportLayerDtls::Setup, and remove a suppression. r=mt